--- a/.github/workflows/convert-and-push.yml
+++ b/.github/workflows/convert-and-push.yml
@@ -21,3 +21,5 @@ jobs:
         run: npm install -g @marp-team/marp-cli
       - name: Convert
         run: marp --${{matrix.format}} marp-test.md
+      - name: check
+        run: ls
