--- a/.github/workflows/convert-and-push.yml
+++ b/.github/workflows/convert-and-push.yml
@@ -7,9 +7,9 @@ on:
 
 jobs:
   Convert:
-    strategy:
-      matrix:
-        format: [pptx, html]
+    # strategy:
+    #   matrix:
+    #     format: [pptx, html]
 
     runs-on: ubuntu-latest
     steps:
@@ -20,12 +20,14 @@ jobs:
       - name: Install Marp CLI
         run: npm install -g @marp-team/marp-cli
       - name: Convert
-        run: marp --${{matrix.format}} marp-test.md
+        # run: marp --${{matrix.format}} marp-test.md
+        run: marp --pptx marp-test.md
       - name: check
         run: ls
 
   Push:
     runs-on: ubuntu-latest
+    needs: Convert
     steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
