--- a/.github/workflows/convert-and-push.yml
+++ b/.github/workflows/convert-and-push.yml
@@ -29,6 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: Convert
     steps:
+      - uses: actions/checkout@v2
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
