--- a/.github/workflows/convert-and-push.yml
+++ b/.github/workflows/convert-and-push.yml
@@ -25,12 +25,12 @@ jobs:
       - name: check
         run: ls
 
-  Release:
-    runs-on: ubuntu-latest
-    needs: Convert
-    steps:
-      - uses: actions/checkout@v2
-      - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
+  # Release:
+  #   runs-on: ubuntu-latest
+  #   needs: Convert
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Release
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       run: npx semantic-release
