--- a/.github/workflows/convert-and-push.yml
+++ b/.github/workflows/convert-and-push.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: *.pptx
+          files: marp-test.pptx
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
