need tag for release action

--- a/.github/workflows/convert-and-push.yml
+++ b/.github/workflows/convert-and-push.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: test
           files: marp-test.pptx
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
